--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.0",
+    "dateformat": "^4.5.1",
     "eslint": "^7.25.0",
     "gulp-changed": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
