--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.0",
+    "colorthief": "^2.3.2",
     "dateformat": "^4.5.1",
     "eslint": "^7.25.0",
     "gulp-changed": "^4.0.2",
